docs: translate .env.example comments to Chinese

--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,9 @@
-# ChatGLM API Configuration
+# ChatGLM API 配置
 CHATGLM_API_KEY=your_api_key_here
 CHATGLM_API_URL=https://open.bigmodel.cn/api/paas/v3/model-api
 CHATGLM_MODEL=chatglm_turbo
 
-# Optional Settings
-LOG_LEVEL=INFO
-CACHE_ENABLED=true
-MAX_RETRIES=3
+# 可选设置
+LOG_LEVEL=INFO          # 日志级别
+CACHE_ENABLED=true     # 是否启用缓存
+MAX_RETRIES=3         # 最大重试次数
