chore: update gitignore for data files
- Add data/cache and data/history to gitignore
- Add .gitkeep files to maintain directory structure

--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,9 @@ ENV/
 # Local test files
 test.py
 *.bak
+
+# Data files
+data/cache/*
+data/history/*
+!data/cache/.gitkeep
+!data/history/.gitkeep
