--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,17 +2,21 @@
 name = "terminal-llm"
 version = "0.1.0"
 description = "An elegant terminal-based LLM client"
-authors = ["Yiyabo! <wxxpublic@outlook.com>"]
+authors = ["Yiyabo <wxxpublic@outlook.com>"]
 readme = "README.md"
 packages = [{include = "src"}]
 
 [tool.poetry.dependencies]
-python = "^3.8"
+python = ">=3.9,<3.13"
 aiohttp = "^3.8.0"
 python-dotenv = "^0.19.0"
 rich = "^10.12.0"
 prompt-toolkit = "^3.0.20"
 tinydb = "^4.8.0"
+tiktoken = "^0.5.2"
+faiss-cpu = "1.9.0.post1"
+numpy = "^1.26.2"
+sentence-transformers = "^2.2.2"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.4.0"
