feat: 更新多个核心文件
- 更新配置文件和环境变量示例
- 优化核心功能模块 (chat.py, commands.py, shell_ai.py)
- 改进 UI 组件
- 删除未使用的 languages.py

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
-# ChatGLM API 配置
-CHATGLM_API_KEY=your_api_key_here
-CHATGLM_API_URL=https://open.bigmodel.cn/api/paas/v3/model-api
-CHATGLM_MODEL=chatglm_turbo
+# API 配置
+API_KEY=your_api_key_here
+API_URL=https://open.bigmodel.cn/api/paas/v3/model-api
+MODEL_NAME=chatglm_turbo
 
 # 可选设置
 LOG_LEVEL=INFO          # 日志级别
