--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,13 +10,14 @@ packages = [{include = "src"}]
 python = ">=3.9,<3.13"
 aiohttp = "^3.8.0"
 python-dotenv = "^0.19.0"
-rich = "^10.12.0"
+rich = "^13.7.0"
 prompt-toolkit = "^3.0.20"
 tinydb = "^4.8.0"
 tiktoken = "^0.5.2"
 faiss-cpu = "1.9.0.post1"
 numpy = "^1.26.2"
 sentence-transformers = "^2.2.2"
+pyperclip = "^1.8.2"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.4.0"
